@@ -1,48 +1,48 @@
-export(runAbsoluteCN)
-export(filterVcfBasic)
-export(bootstrapResults)
-export(filterVcfMuTect)
-export(setPriorVcf)
-export(getDiploid)
 export(autoCurateResults)
-export(segmentationCBS)
-export(segmentationPSCBS)
-export(poolCoverage)
-export(readCoverageGatk)
-export(correctCoverageBias)
-export(callAlterations)
-export(findFocal)
-export(readCurationFile)
-export(calculatePowerDetectSomatic)
+export(bootstrapResults)
 export(calculateBamCoverageByInterval)
 export(calculateGCContentByInterval)
+export(calculatePowerDetectSomatic)
+export(callAlterations)
+export(callLOH)
+export(correctCoverageBias)
 export(createCurationFile)
+export(createExonWeightFile)
 export(createNormalDatabase)
 export(createSNPBlacklist)
-export(createExonWeightFile)
+export(filterVcfBasic)
+export(filterVcfMuTect)
 export(findBestNormal)
-export(plotBestNormal)
-export(predictSomatic)
-export(plotAbs)
+export(findFocal)
+export(getDiploid)
 export(getSexFromCoverage)
 export(getSexFromVcf)
-import(VariantAnnotation)
+export(plotAbs)
+export(plotBestNormal)
+export(poolCoverage)
+export(predictSomatic)
+export(readCoverageGatk)
+export(readCurationFile)
+export(runAbsoluteCN)
+export(segmentationCBS)
+export(segmentationPSCBS)
+export(setPriorVcf)
 import(DNAcopy)
-importFrom("data.table", "data.table")
-importFrom("RColorBrewer", "brewer.pal")
+import(IRanges)
+import(VariantAnnotation)
+importFrom("Biostrings", "letterFrequency")
 importFrom("GenomeInfoDb", "seqnames")
 importFrom("GenomicRanges", "GRanges")
-importFrom("SummarizedExperiment", "rowRanges")
+importFrom("RColorBrewer", "brewer.pal")
 importFrom("Rsamtools", "ScanBamParam", "scanBamFlag", "scanBam", "scanFa")
-import(IRanges)
 importFrom("S4Vectors", "queryHits", "subjectHits")
+importFrom("SummarizedExperiment", "rowRanges")
+importFrom("data.table", "data.table")
 importFrom("grDevices", "colorRampPalette", "dev.off", "png", "adjustcolor")
-importFrom("graphics", "abline", "axis", "boxplot", "contour", "hist",
-    "image", "legend", "lines", "par", "plot", "text", "mtext", "polygon",
-    "points")
-importFrom("stats", "C", "complete.cases", "dbeta", "dist", "dnorm",
-    "dunif", "loess", "pbeta", "prcomp", "predict", "runif", "t.test",
-    "weighted.mean", "dbinom", "fisher.test", "hclust", "cutree")
-importFrom("utils", "data", "head", "read.csv", "read.delim",
-    "read.table", "write.csv", "write.table", "tail", "packageVersion")
-importFrom("Biostrings", "letterFrequency")
+importFrom("graphics", "abline", "axis", "boxplot", "contour", "hist","image", 
+    "legend", "lines", "par", "plot", "text", "mtext", "polygon","points")
+importFrom("stats", "C", "complete.cases", "dbeta", "dist", "dnorm", "dunif", 
+    "loess", "pbeta", "prcomp", "predict", "runif", "t.test", "weighted.mean", 
+    "dbinom", "fisher.test", "hclust", "cutree")
+importFrom("utils", "data", "head", "read.csv", "read.delim", "read.table", 
+    "write.csv", "write.table", "tail", "packageVersion")
